@@ -6,7 +6,7 @@ gem 'rubocop', '~> 0.72.0', require: false
 
 group :test, :remote_test do
   # gateway-specific dependencies, keeping these gems out of the gemspec
-  gem 'braintree', '>= 3.0.0', '<= 3.0.1'
+  gem 'braintree', '>= 4.12.0'
   gem 'jose', '~> 1.1.3'
   gem 'jwe'
   gem 'mechanize'
